[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://MyItems/ItemRow.gd" type="Script" id=2]

[node name="ItemRow" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 137.0
margin_bottom = 64.0
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 69.0
margin_bottom = 30.0
text = "Item Label"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 69.0
margin_bottom = 48.0
text = "Hero Label"

[node name="EquipButton" type="Button" parent="HBoxContainer"]
margin_left = 141.0
margin_top = 22.0
margin_right = 188.0
margin_bottom = 42.0
size_flags_vertical = 4
text = "Equip"

[node name="TypeLabel" type="Label" parent="."]
visible = false
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 82.0
text = "Item Type"

[node name="EffectLabel" type="Label" parent="."]
visible = false
margin_top = 136.0
margin_right = 137.0
margin_bottom = 150.0
text = "What the Item Does"

[node name="DescriptionLabel" type="Label" parent="."]
visible = false
margin_top = 154.0
margin_right = 137.0
margin_bottom = 168.0
text = "Item Description"
[connection signal="gui_input" from="." to="." method="_on_ItemRow_gui_input"]
[connection signal="pressed" from="HBoxContainer/EquipButton" to="." method="_on_EquipButton_pressed"]
